# django_task1

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.py  docker-compose-local.yml  docker-compose.yml  dockerfile  pyproject.toml  pytest.ini  requirements.txt
app/: settings.py  urls.py
team/: admin.py  models.py  serializers.py  urls.py  views.py
team/migrations/: 0001_initial.py
team/tests/: conftest.py  fixtures.py  member_tests.py  schemas.py  team_tests.py  test_data.py  utils.py
