[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Olderestin <sdordiuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.2"
djangorestframework = "3.14.0"
pydantic-settings = "2.1.0"
drf-yasg = "1.21.7"
psycopg2-binary = "2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
